--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
                 android:background="@color/fallback"
                 android:focusableInTouchMode="true"
                 android:descendantFocusability="beforeDescendants">
-    <fragment android:name="tasty.frenchdonuts.motivate.TaskFragment"
+    <fragment android:name="tasty.frenchdonuts.motivate.GoalFragment"
               android:id="@+id/tasks"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
