--- a/app/src/main/res/layout/goals_view.xml
+++ b/app/src/main/res/layout/goals_view.xml
@@ -1,127 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                xmlns:custom="http://schemas.android.com/apk/res-auto">
-    <ListView
-          android:id="@+id/lvGoals"
+                xmlns:tools="http://schemas.android.com/tools">
+    <android.support.v7.widget.RecyclerView
+          android:id="@+id/rvGoals"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_marginTop="200dp"
           tools:layout="@layout/abc_screen_simple"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:background="@color/fallback"
-            android:paddingLeft="72dp"
-            android:paddingRight="16dp">
-            <LinearLayout
-                android:id="@+id/llCenter"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:orientation="horizontal"
-                android:layout_centerVertical="true"
-            />
-            <com.rengwuxian.materialedittext.MaterialEditText
-                android:id="@+id/etLv"
-                android:layout_width="24dp"
-                android:layout_height="wrap_content"
-                android:layout_above="@id/llCenter"
-                android:layout_marginBottom="24dp"
-                android:layout_marginRight="56dp"
-                android:layout_marginEnd="56dp"
-                android:layout_alignParentRight="true"
-                android:gravity="center"
-                android:inputType="number"
-                custom:floatingLabel="normal"
-                android:maxLength="1"
-                custom:primaryColor="#DE000000"
-                android:hint="Lv"/>
-            <com.rengwuxian.materialedittext.MaterialEditText
-                android:id="@+id/etTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="24dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginEnd="24dp"
-                android:layout_toLeftOf="@id/etLv"
-                android:layout_alignBaseline="@id/etLv"
-                custom:floatingLabel="normal"
-                custom:singleLineEllipsis="true"
-                custom:primaryColor="#DE000000"
-                android:hint="Title"/>
-            <TextView
-                android:id="@+id/tvDueIn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/llCenter"
-                android:text="Due in: "/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tvDueIn"
-                android:layout_marginRight="56dp"
-                android:layout_marginEnd="56dp">
-                <com.rengwuxian.materialedittext.MaterialEditText
-                    android:id="@+id/etDueInDays"
-                    android:layout_width="24dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:inputType="number"
-                    android:maxLength="2"
-                    custom:primaryColor="#DE000000"
-                    android:hint="1"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="24dp"
-                    android:text="d(s)"/>
-                <com.rengwuxian.materialedittext.MaterialEditText
-                    android:id="@+id/etDueInMonths"
-                    android:layout_width="24dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:inputType="number"
-                    android:maxLength="2"
-                    custom:primaryColor="#DE000000"
-                    android:hint="0"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="24dp"
-                    android:text="mo(s)"/>
-                <com.rengwuxian.materialedittext.MaterialEditText
-                    android:id="@+id/etDueInYears"
-                    android:layout_width="24dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:inputType="number"
-                    android:maxLength="2"
-                    custom:primaryColor="#DE000000"
-                    android:imeOptions="actionDone"
-                    android:hint="0"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="yr(s)"/>
-            </LinearLayout>
-        </RelativeLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/actionbar_shadow"/>
-    </LinearLayout>
-    <com.getbase.floatingactionbutton.AddFloatingActionButton
-        android:id="@+id/btnAddGoal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        custom:fab_plusIconColor="@color/grey"
-        custom:fab_colorNormal="@color/fallback"
-        custom:fab_colorPressed="@color/black_text"
-        android:layout_gravity="right"
-        android:layout_marginTop="166dp"
-        android:layout_marginRight="7dp"/>
 </merge>
